[tool.poetry]
name = "p0"
version = "1.0.0"
description = ""
authors = ["Thibault Lebrun <thibaultlebrun@live.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.7.3"
protocol0 = {path = "C:/Users/thiba/dev/code/projects/p0_script", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
