[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "backend"
version = "1.0.0"
description = "Protocol0 web backend"
readme = "README.md"
authors = ["Thibault Lebrun <thibaultlebrun@live.fr>"]
license = "MIT"
repository = "https://github.com/lebrunthibault/protocol0"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 4 - Beta"
]
keywords = ["remote script", "ableton"]

[tool.poetry.dependencies]
python = "3.11.4"
python-dotenv = "^1.0.0"
loguru = "^0.7.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pydantic=" ^2.4.2"
pydantic-settings = "^2.0.3"
fastapi = "^0.104.0"
ratelimit = "^2.2.1"

[tool.poetry.dev-dependencies]
win11toast = "^0.34"
flake8 = "*"
vulture = "*"

[tool.poetry.scripts]
server = "backend.api.main:start"

[tool.mypy]
python_version = "3.11"
exclude = ['vulture_whitelist.py']
pretty = false
ignore_missing_imports = true
follow_imports = 'skip'
# cannot remove misc because of _Framework. union-attr possibly
disable_error_code = ['misc','union-attr', 'override', 'var-annotated']
show_error_codes = true
warn_unreachable = true
strict_equality = true
disallow_any_explicit = true
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
incremental = false

[tool.black]
line-length = 100

[tool.vulture]
min_confidence = 60
make_whitelist = true
sort_by_size = true
verbose = false
exclude = [
    '.venv',
    'backend/api/routes',
]
