[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "protocol0-agent"
version = "0.1.0"
description = "Protocol0 local agent (out-of-process). Watches the keyboard, resolves bindings against the global config and calls the remote script's HTTP API, and serves the local web UI (homepage + keymapper + API) on port 9010. Runs under normal system Python (ctypes/pynput available), unlike the Ableton-embedded interpreter."
authors = ["Thibault Lebrun <thibaultlebrun@live.fr>"]
packages = [{include = "agent"}]

[tool.poetry.dependencies]
# Borné à <3.15 pour PyInstaller 6.x (build de l'exe autonome). L'agent tourne
# sous Python système récent, donc cette borne supérieure n'est pas contraignante.
python = ">=3.11,<3.15"
pynput = "^1.7.6"
requests = "^2.31.0"
# Systray icon (agent/tray.py) : la surface visible « cet outil tourne, voici Quit ».
# pystray porte l'icône, Pillow la charge (protocol0.ico). Runtime (embarqués dans l'exe),
# pas seulement build : Pillow était dev-only pour generate_icon.py, le tray le rend runtime.
pystray = "^0.19.5"
pillow = "^10.0"

[tool.poetry.scripts]
agent = "agent.main:start"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
pytest = "*"
pyinstaller = "^6.6"
# Pillow est désormais une dépendance runtime (agent/tray.py charge protocol0.ico) :
# elle couvre aussi l'usage build-time de scripts/windows/generate_icon.py.

[tool.black]
line-length = 100
