[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "protocol0-detector"
version = "0.1.0"
description = "Protocol0 local keyboard-shortcut detector (out-of-process). Watches the keyboard, resolves bindings against the global config, and calls the remote script's HTTP API. Runs under normal system Python (ctypes/pynput available), unlike the Ableton-embedded interpreter."
authors = ["Thibault Lebrun <thibaultlebrun@live.fr>"]
packages = [{include = "detector"}]

[tool.poetry.dependencies]
# Borné à <3.15 pour PyInstaller 6.x (build de l'exe autonome). Le détecteur tourne
# sous Python système récent, donc cette borne supérieure n'est pas contraignante.
python = ">=3.11,<3.15"
pynput = "^1.7.6"
requests = "^2.31.0"

[tool.poetry.scripts]
detector = "detector.main:start"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
pytest = "*"
pyinstaller = "^6.6"

[tool.black]
line-length = 100
