[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "protocol0"
version = "0.0.0"
description = "Protocol0 ableton remote script (loaded from source, not packaged)"
authors = ["Thibault Lebrun <thibaultlebrun@live.fr>"]
packages = [{include = "protocol0"}]

[tool.poetry.dependencies]
python = ">=3.11"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
vulture = "*"
pytest = "*"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
exclude = [
    'tests',
    'vulture_whitelist.py',
]
pretty = false
ignore_missing_imports = true
follow_imports = 'skip'
# cannot remove misc because of _Framework. union-attr possibly
disable_error_code = ['misc','union-attr', 'has-type', 'assignment']
show_error_codes = true
warn_unreachable = true
strict_equality = true
disallow_any_explicit = false
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_redundant_casts=true
warn_unused_ignores=true

[tool.vulture]
make_whitelist = true
min_confidence = 60
sort_by_size = true
verbose = false
exclude = [
    'venv/',
    'build/',
    'command/',
    'command_handler/',
    'RecordingBarLengthEnum.py',
]
ignore_names = [
    "subject",
]


