[tool.poetry]
name = "protocol0-loader"
version = "1.0.0"
description = ""
authors = ["Thibault Lebrun <thibaultlebrun@live.fr>"]
package-mode = false

# The protocol0 source itself is loaded from the checked-out repo
# (see __init__.py, P0_SOURCE_DIR). protocol0 now has no third-party
# runtime deps — it runs on stdlib-only Python 3.11.
[tool.poetry.dependencies]
python = "3.11.*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
